[gd_scene load_steps=5 format=3 uid="uid://b45p8nijrvd3v"]

[ext_resource type="Script" path="res://src/ui/browser/browser_tree.gd" id="2_3wiph"]
[ext_resource type="PackedScene" uid="uid://c1y3wecbymbg5" path="res://src/ui/add_file_folder_dialogs/add_file_dialog.tscn" id="3_evlqf"]
[ext_resource type="PackedScene" uid="uid://blrmwwygqy4wt" path="res://src/ui/add_file_folder_dialogs/add_folder_dialog.tscn" id="4_3wydx"]
[ext_resource type="PackedScene" uid="uid://uyiydlj6idmu" path="res://src/ui/find_dialog/find_dialog.tscn" id="5_myltl"]

[node name="BrowserTree" type="Tree"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
allow_reselect = true
select_mode = 2
scroll_horizontal_enabled = false
script = ExtResource("2_3wiph")

[node name="AddFileDialog" parent="." instance=ExtResource("3_evlqf")]
unique_name_in_owner = true
visible = false

[node name="AddFolderDialog" parent="." instance=ExtResource("4_3wydx")]
unique_name_in_owner = true
visible = false

[node name="FindDialog" parent="." instance=ExtResource("5_myltl")]
unique_name_in_owner = true
visible = false

[connection signal="button_clicked" from="." to="." method="_on_button_clicked"]
[connection signal="empty_clicked" from="." to="." method="_on_empty_clicked"]
[connection signal="item_activated" from="." to="." method="_on_item_activated"]
[connection signal="item_collapsed" from="." to="." method="_on_item_collapsed"]
[connection signal="item_mouse_selected" from="." to="." method="_on_item_mouse_selected"]
[connection signal="confirmed_data" from="AddFileDialog" to="." method="_on_add_file_dialog_confirmed_data"]
[connection signal="confirmed_data" from="AddFolderDialog" to="." method="_on_add_folder_dialog_confirmed_data"]
